2005-12-31  Daniel Wagner  <wagi@monom.org>

	* src/debugmodule/debugmodule.h: debugFatal, debugError
	and debugWarning declaration always declared.

	* src/xmlparser.c (freebob_xmlparse_connection): Parse IsoChannel
	node.

	* src/freebob.cpp (freebob_print_connection_info): Print all
	members from connection_spec (IsoChannel and IsMaster).

	* src/avdevice.cpp (addPlugToXmlDescription): Set direction
	according library interface definition and not according
	avc model. 
	Add IsoChannel node.

	* configure.ac: Version set to 0.0.2

2005-12-30  Daniel Wagner  <wagi@monom.org>

	* src/libfreebobavc/avc_extended_stream_format.cpp (fire): Buffer
	length increased.

	* src/avdevice.cpp (discoverStep9): Error message extended.
	More debug info added.

	* src/debugmodule/debugmodule.h: Enable debugFatal, debugError and 
	also in the release case.

2005-12-28  Daniel Wagner  <wagi@monom.org>

	* tests/test-freebob.c (main): Debug info added.

	* src/libfreebobavc/ieee1394service.cpp (initialize): Use 
	raw1394_new_handle_on_port instead of raw1394_new_handle and
	raw1394_set_port.

	* src/devicemanager.cpp (initialize): After deleteing 1394 service 
	clear also pointer.

	* libfreebob/freebob.h: freebob_direction enum names changed
	members which jack backed freebob needs to freebob_connection added
	
	* configure.ac: Update library version depency.

2005-12-27  Daniel Wagner  <wagi@monom.org>

	* src/libfreebobavc/avc_extended_plug_info.cpp (serialize): 
	Do cast of the length field to let the compiler know which version
	of the serializing code it has to take.

2005-12-26  Daniel Wagner  <wagi@monom.org>

	* Initial check-in and first beta relase 'late x-mass gift'.
	
