@@ -1,3 +1,8 @@
+2006-01-02  Daniel Wagner  <wagi@monom.org>
+
+	* src/avdevice.cpp (discoverStep9): Sanity check: 8 logical
+	midi channel fit into 1 channel.
+
 2005-12-31  Daniel Wagner  <wagi@monom.org>
 
 	* src/debugmodule/debugmodule.h: debugFatal, debugError
